<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">AListDropbox</string>

	<string-array name="role_array">
		<item>None</item>
		<item>Viewer</item>
		<item>Editor</item>
	</string-array>

	<string name="action_settings">Settings</string>
	<string name="action_about">About</string>
	<string name="action_addItem">Add Item</string>
	<string name="action_bar_title_manage_items">Manage Items</string>
	<string name="action_bar_title_select_list_colors">Select List Colors</string>
	<string name="action_clearAllSelectedItems">Clear All Selected Items</string>
	<string name="action_clearList">Clear List</string>
	<string name="action_deleteAllItems">Delete All Items</string>
	<string name="action_deleteList">Delete List</string>
	<string name="action_editListTitle">Edit List Title</string>
	<string name="action_editStoreName_text">Edit store name</string>
	<string name="action_emailList">Email List</string>
	<string name="action_groups">Groups</string>
	<string name="action_ManageItems">Manage Items</string>
	<string name="action_newList">New List</string>
	<string name="action_newStore_text">New Store</string>
	<string name="action_deleteStore_text">Delete Store</string>
	<string name="action_Preferences">Preferences</string>
	<string name="action_removeStruckOffItems">Remove struck off items</string>
	<string name="action_showStoreLocation_text">Show store location</string>
	<string name="action_title_manage_items">Manage Items</string>
	<string name="txtEditListTitle_Hint">List Title</string>
	<string name="btn_apply_text">Apply</string>
	<string name="btn_cancel_text">Cancel</string>
	<string name="dialog_edit_list_title">Edit List Title</string>
	<string name="dialog_title_create_new_list">Create New List</string>
	<string name="dialog_lists_blank_list_text">[Blank List]</string>
	<string name="dialog_lists_groceries_list_text">Groceries List</string>
	<string name="dialog_lists_to_do_list_text">To Do List</string>

</resources>