<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/action_removeStruckOffItems"
		android:icon="@drawable/ic_action_accept"
		android:showAsAction="ifRoom"
		android:title="@string/action_removeStruckOffItems"/>
	<item
		android:id="@+id/action_addItem"
		android:icon="@drawable/ic_action_new"
		android:showAsAction="ifRoom"
		android:title="@string/action_addItem"/>
	<item
		android:id="@+id/action_newList"
		android:showAsAction="never"
		android:title="@string/action_newList"/>
	<item
		android:id="@+id/action_clearList"
		android:showAsAction="never"
		android:title="@string/action_clearList"/>
	<item
		android:id="@+id/action_emailList"
		android:showAsAction="never"
		android:title="@string/action_emailList"/>
	<item
		android:id="@+id/action_editListTitle"
		android:showAsAction="never"
		android:title="@string/action_editListTitle"/>
	<item
		android:id="@+id/action_deleteList"
		android:showAsAction="never"
		android:title="@string/action_deleteList"/>
	<item
		android:id="@+id/action_Preferences"
		android:showAsAction="never"
		android:title="@string/action_Preferences"/>
	<item
		android:id="@+id/action_about"
		android:showAsAction="never"
		android:title="@string/action_about"/>
	<item
		android:id="@+id/action_link_to_dropbox"
		android:showAsAction="never"
		android:title="Link to Dropbox"/>
	<item
		android:id="@+id/action_unlink_dropbox"
		android:showAsAction="never"
		android:title="Unlink Dropbox"/>

</menu>