<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_showStoreLocation"
        android:icon="@drawable/ic_action_location_found"
        android:showAsAction="ifRoom"
        android:title="@string/action_showStoreLocation_text"/>
    <item
        android:id="@+id/action_editStoreName"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="never"
        android:title="@string/action_editStoreName_text"/>
    <item
        android:id="@+id/action_newStore"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="never"
        android:title="@string/action_newStore_text"/>
    <item
        android:id="@+id/action_deleteStore"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="never"
        android:title="@string/action_deleteStore_text"/>
</menu>